--- a/src/components/Photos/photos.scss
+++ b/src/components/Photos/photos.scss
@@ -46,8 +46,16 @@
     border: 1px solid grey;
     border-radius: 10px;
     background-color: rgb(143, 196, 236);
+    transition: all 0.3s;
+    &:hover {
+      background-color: rgb(52, 150, 224);
+      transition: all 0.3s;
+    }
   }
   ._disable {
     opacity: 0.6;
+    &:hover {
+      background-color: rgb(143, 196, 236);
+    }
   }
 }
