--- a/src/components/TodoItem/todoItem.scss
+++ b/src/components/TodoItem/todoItem.scss
@@ -32,6 +32,11 @@
     border-radius: 5px;
     background-color: rgb(134, 178, 232);
     padding: 5px;
+    transition: all 0.3s;
+    &:hover {
+      background-color: rgb(78, 141, 218);
+      transition: all 0.3s;
+    }
   }
   &__back {
     cursor: pointer;
