--- a/src/components/Todos/todos.scss
+++ b/src/components/Todos/todos.scss
@@ -89,6 +89,11 @@
         justify-content: space-between;
         align-items: center;
       }
+      &__wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
       &__chkbox {
         cursor: pointer;
       }
